--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,6 +4,8 @@ ext {
     androidRecyclerView = "1.1.0"
     androidLifeCycleVersion = "2.2.0"
     koin_version = '2.0.1'
+    viewPager2 = "1.0.0"
+
 
     presentationLib = [
             appCompat         : "androidx.appcompat:appcompat:$androidVersion",
@@ -14,7 +16,7 @@ ext {
             lifeCycleViewModel: "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidLifeCycleVersion",
             lifeCycleRuntime  : "androidx.lifecycle:lifecycle-runtime-ktx:$androidLifeCycleVersion",
             koinViewmodel     : "org.koin:koin-androidx-viewmodel:$koin_version",
-
+            viewPager2         : "androidx.viewpager2:viewpager2:$viewPager2"
     ]
 
     appLib = [
