--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,6 +4,9 @@ ext {
     androidRecyclerView = "1.1.0"
     androidLifeCycleVersion = "2.2.0"
     koin_version = '2.0.1'
+    constraintlayout = '2.0.0-beta1'
+    materialdesign = '1.1.0-alpha09'
+
 
     presentationLib = [
             appCompat         : "androidx.appcompat:appcompat:$androidVersion",
@@ -14,6 +17,8 @@ ext {
             lifeCycleViewModel: "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidLifeCycleVersion",
             lifeCycleRuntime  : "androidx.lifecycle:lifecycle-runtime-ktx:$androidLifeCycleVersion",
             koinViewmodel     : "org.koin:koin-androidx-viewmodel:$koin_version",
+            constraintlayout : "androidx.constraintlayout:constraintlayout:$constraintlayout",
+            material        : "com.google.android.material:material:$materialdesign",
 
     ]
 
